Fix header overlap and authorization routing

--- a/app/assets/stylesheets/user_home.css.scss
+++ b/app/assets/stylesheets/user_home.css.scss
@@ -1,4 +1,6 @@
 .articles-header {
+  z-index: 1;
+  position: relative;
   display: block;
   padding: 5px;
   background: #ADD3D3;
